# Django-blog

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_options.py
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_comment.py  0003_post_status.py  0004_alter_post_status.py  0005_alter_post_options_post_image.py  0006_category.py  0007_post_category.py  0008_post_author.py
core/: settings.py  urls.py
core_app/: views.py
templates/accounts/: login.html  signup.html
templates/blog/: category.html  create_post.html  my_posts.html  post_detail.html  search.html
templates/core/: base.html  frontpage.html
