[tool.poetry]
name = "django-blog"
version = "0.1.0"
description = ""
authors = ["Eng-Ahmad-Almohammad <almohammedahmed2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
